# AoC21

./: CMakeLists.txt
include/: CMakeLists.txt
src/: CMakeLists.txt
src/Day1/: DayOne.cpp  DayOne.h
src/Day2/: DayTwo.cpp  DayTwo.h
src/Day3/: DayThree.cpp  DayThree.h
src/tests/: tests.cpp
